--- a/green-fin-tech/Dockerfile
+++ b/green-fin-tech/Dockerfile
@@ -12,4 +12,4 @@ WORKDIR /app
 COPY --from=build /app/build ./build
 COPY --from=build /app/package*.json ./
 RUN npm install serve
-CMD ["npm", "start"]
+CMD ["npm", "run", "start:prod"]
