--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
 
 # production
 /build
@@ -11,11 +18,6 @@
 .env.test.local
 .env.production.local
 
-# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# editor directories
-.vscode
-.idea
