--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@reduxjs/toolkit": "^1.9.7",
-    "@react-spring/web": "^9.5.5",
+    "@react-spring/web": "9.5.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
