--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
-    "react-swipeable": "^7.0.1",
-    "react-tinder-card": "^1.6.3",
+    "react-spring": "^9.7.3",
+    "react-use-gesture": "^9.1.3",
     "serve": "^14.2.1",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
